--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ language: c
 
 before_install:
   # Make sure everything's up to date.
-  - sudo apt-get install update -qq
+  - sudo apt-get update -qq
 
 script:
   # Install required ansible roles
